manifests/modela-system/controlplane/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: modela-control-plane
    app.kubernetes.io/part-of: modela
  name: modela-control-plane
  namespace: modela-system
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: modela-control-plane
  template:
    metadata:
      labels:
        app.kubernetes.io/name: modela-control-plane
    spec:
      serviceAccountName: modela-control-plane
      containers:
        - name: main
          image: ghcr.io/metaprov/modela-control-plane:develop
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /var/opt/modela/data
            - name: webhook-server-cert
              mountPath: /tmp/k8s-webhook-server/serving-certs
              readOnly: true
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: metrics
            - containerPort: 8008
              name: profiling
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
            - containerPort: 6060
              name: pprof
          resources:
            requests:
              cpu: 400m
              memory: 1024Mi

        - name: cloud-proxy
          image: ghcr.io/metaprov/modela-cloud-proxy:develop
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "512m"
              memory: 512Mi
            requests:
              cpu: "256m"
              memory: 256Mi
          ports:
            - containerPort: 8090
              name: http
            - containerPort: 9090
              name: metrics
            - containerPort: 8008
              name: profiling
            - containerPort: 6060
              name: pprof
          volumeMounts:
            - name: data
              mountPath: /var/opt/modela/data

      volumes:
        - name: data
          emptyDir: { }
        - name: webhook-server-cert
          secret:
            secretName: webhook-server-cert
