manifests/modela-system/controlplane/webhook-mutation-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: data-mutating-webhook-configuration
  namespace: modela-system
  annotations:
    cert-manager.io/inject-ca-from: modela-system/serving-cert
webhooks:

  - name: dataproduct.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dataproducts
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-dataproduct
      caBundle: CERT

  - name: dataproductversion.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dataproductversions
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-dataproductversion
      caBundle: CERT


  - name: dataset.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - datasets
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-dataset
      caBundle: CERT


  - name: datasource.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - datasources
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-datasource
      caBundle: CERT

  - name: datapipeline.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - datapipelines
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-datapipeline
      caBundle: CERT

  - name: datapipelinerun.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - datapipelineruns
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-datapipelinerun
      caBundle: CERT

  - name: entity.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - entities
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-entity
      caBundle: CERT

  - name: featuregroup.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - featuregroups
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-featuregroups
      caBundle: CERT

  - name: recipe.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - recipes
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-recipe
      caBundle: CERT

  - name: reciperun.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - reciperuns
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-reciperun
      caBundle: CERT

  - name: sqlquery.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sqlqueries
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-sqlquery
      caBundle: CERT

  - name: sqlqueryrun.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sqlqueryruns
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-sqlqueryrun
      caBundle: CERT

  - name: webrequest.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - webrequest
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-webrequest
      caBundle: CERT

  - name: webrequestrun.data.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "data.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - webrequestruns
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-data-modela-ai-v1alpha1-webrequestrun
      caBundle: CERT

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: inference-mutating-webhook-configuration
  namespace: modela-system
  annotations:
    cert-manager.io/inject-ca-from: modela-system/serving-cert
webhooks:
  - name: prediction.inference.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "inference.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - predictions
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-inference-modela-ai-v1alpha1-prediction
      caBundle: CERT

  - name: predictor.inference.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "inference.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - predictors
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-inference-modela-ai-v1alpha1-predictor
      caBundle: CERT

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: infra-mutating-webhook-configuration
  namespace: modela-system
  annotations:
    cert-manager.io/inject-ca-from: modela-system/serving-cert
webhooks:
  - name: account.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - accounts
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-account
      caBundle: CERT

  - name: connection.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - connections
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-connection
      caBundle: CERT

  - name: license.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - licenses
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-license
      caBundle: CERT


  - name: lab.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - labs
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-lab
      caBundle: CERT

  - name: alert.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - alerts
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-alert
      caBundle: CERT


  - name: commit.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - commits
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-commit
      caBundle: CERT

  - name: notifier.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - notifiers
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-notifier
      caBundle: CERT

  - name: servingsite.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - servingsites
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-servingsite
      caBundle: CERT

  - name: tenant.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - tenants
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-tenant
      caBundle: CERT

  - name: virtualbucket.infra.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "infra.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - virtualbuckets
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-infra-modela-ai-v1alpha1-virtualbucket
      caBundle: CERT


---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: training-mutating-webhook-configuration
  namespace: modela-system
  annotations:
    cert-manager.io/inject-ca-from: modela-system/serving-cert
webhooks:
  - name: model.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - models
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-training-modela-ai-v1alpha1-model
      caBundle: CERT

  - name: notebook.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - notebooks
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-training-modela-ai-v1alpha1-notebook
      caBundle: CERT

  - name: notebookrun.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - notebookruns
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-training-modela-ai-v1alpha1-notebookrun
      caBundle: CERT

  - name: modelpipeline.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - modelpipelines
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-training-modela-ai-v1alpha1-modelpipeline
      caBundle: CERT

  - name: modelpipelinerun.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - modelpipelineruns
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-training-modela-ai-v1alpha1-modelpipelinerun
      caBundle: CERT


  - name: modelclass.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - modelclasses
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-training-modela-ai-v1alpha1-modelclass
      caBundle: CERT

  - name: study.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - studies
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-training-modela-ai-v1alpha1-study
      caBundle: CERT

  - name: report.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - reports
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /mutate-training-modela-ai-v1alpha1-report
      caBundle: CERT

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: team-mutating-webhook-configuration
  namespace: modela-system
  annotations:
    cert-manager.io/inject-ca-from: modela-system/serving-cert
webhooks:
  - name: todo.team.modela.ai
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Fail
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "team.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - todos
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /validate-team-modela-ai-v1alpha1-todo
      caBundle: CERT

  - name: review.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "training.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - reviews
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /validate-team-modela-ai-v1alpha1-review
      caBundle: CERT

  - name: postmortem.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "team.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - postmortems
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /validate-team-modela-ai-v1alpha1-postmortem
      caBundle: CERT

  - name: runbook.training.modela.ai
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - v1beta1
      - v1alpha1
    rules:
      - apiGroups:
          - "team.modela.ai"
        apiVersions:
          - v1alpha1
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runbooks
    clientConfig:
      service:
        namespace: modela-system
        name: modela-control-plane-webhook
        path: /validate-team-modela-ai-v1alpha1-runbook
      caBundle: CERT
